k8s/dep-postgres-ms1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-selector
  template:
    metadata:
      labels:
        app: postgres-selector
    spec:
      containers:
        - name: con-postgres
          image: postgres
          ports:
            - containerPort: 5432
