k8s/dep-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-postgres
  labels:
    app: dep-postgres-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dep-postgres-selector
  template:
    metadata:
      labels:
        app: dep-postgres-selector
    spec:
      containers:
        - name: con-postgres
          image: postgres
          ports:
            - containerPort: 5432
