k8s/dep-test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-test-app
  labels:
    app: dep-test-app-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dep-test-app-selector
  template:
    metadata:
      labels:
        app: dep-test-app-selector
    spec:
      containers:
        - name: con-test-app
          image: ismataga/k8s-ingress:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8011
