k8s/ms1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms1
  labels:
    app: ms-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ms1-selector
  template:
    metadata:
      labels:
        app: ms1-selector
    spec:
      containers:
        - name: con-ms1
          image: ismataga/k8s-ingress:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8011
          livenessProbe:
            httpGet:
              path: /
              port: 8011
            initialDelaySeconds: 60
            periodSeconds: 15
