k8s/svc-ms1.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms1-svc
  namespace: ingress-nginx
spec:
  selector:
    app: ms1-selector
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
