k8s/svc-postgres-ms1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres-label
  name: svc-postgres
  namespace: ingress-nginx
spec:
  selector:
    app: postgres-selector
  ports:
    - port: 5431
      targetPort: 5432
      protocol: TCP
