k8s/svc-test-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-test-app
  labels:
    app: svc-test-app-labels
  namespace: default
spec:
  type: NodePort
  selector:
    app: dep-test-app-selector
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      nodePort: 30008
