k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.ms22.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-test-app
                port:
                  number: 8080
